demos/ingress-lab/deploy1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1 
spec:
  replicas: 1
  selector:
    matchLabels:
      key: app1
  template:
    metadata:
      labels:
        key: app1
    spec:
      containers:
      - name: app1
        image: nginx 
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  selector:
    key: app1
  ports:
    - port: 80
      targetPort: 80
