demos/ingress-lab/deploy2.yaml
apiVersion: apps/v1
kind:  Deployment
metadata:
  name: app2
  labels:
    app: mycha-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: nginx2
          image: httpd 
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app2
  labels:
    app: app2
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: app2
